--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "sportplay",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-picker/picker": "2.2.1",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
     "expo": "~44.0.0",
+    "expo-dev-client": "~0.8.6",
+    "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-navigation-bar-color": "^2.0.1",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
-    "expo-linear-gradient": "~11.0.3"
+    "expo-navigation-bar": "~1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
